--- a/src/app/feature-modules/patients/conference/conference.component.html
+++ b/src/app/feature-modules/patients/conference/conference.component.html
@@ -2,15 +2,50 @@
     <mat-sidenav #drawer position="end" class="sidenav" fixedInViewport
         [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
         [mode]="(isHandset$ | async) ? 'over' : 'side'"
-        opened = "true"
-        [opened]="(isHandset$ | async) === false"
+        opened = "false"
         fxFlex="1 1 auto"
         >
    
         <div id="sidenavInner"  fxLayout="column">
-  
-         
-  
+            <mat-toolbar class="chat-toolbar" fxFlex="1 1 60px"  >
+                <mat-toolbar-row fxLayout="row" fxLayoutAlign="center center">
+
+                    <mat-icon class="close-icon">close</mat-icon>
+                   
+                    <span fxFlex="1 1 auto"></span>
+
+                    <mat-label class="header-label chat-text" >Chat</mat-label>
+                    <span fxFlex="1 1 auto"></span>
+                    <span fxFlex="1 1 24px"></span>
+                </mat-toolbar-row>
+                
+            </mat-toolbar>
+
+            <div class="chatbox-wrapper" #chatContainer fxFlex="1 1 auto" fxLayout="column" [scrollTop]="chatContainer.scrollHeight" >
+                <div  [ngClass]="{'chat-mgs-outer':true, 'left-label':chat.getSenderId() !== currentUser.getUserId(), 'right-label':chat.getSenderId() === currentUser.getUserId()}" *ngFor="let chat of chatCollection" fxLayout="row" fxLayoutGap="10px" >
+                    <img *ngIf="chat.getSenderId() !== currentUser.getUserId()" mat-card-avatar src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR4QcsAkyJy8YJXzB_ODAR9Q88d50--zfXfNw&usqp=CAU">
+                    <div fxLayout="column">
+                            <mat-label [ngClass]="{'left-time-label': chat.getSenderId() !== currentUser.getUserId(),
+                             'right-time-label':chat.getSenderId() === currentUser.getUserId()}" class="small-label">
+                             {{chat.getSenderId() === currentUser.getUserId() ? chat.getTimeLabel():chat.getSenderLabel()}}</mat-label>
+                            <mat-label [ngClass]="{'chat-msg' : true, 'msg-left':chat.getSenderId() !== currentUser.getUserId(), 'msg-right':chat.getSenderId() === currentUser.getUserId()}">
+                               {{chat.getMsg()}}
+                            </mat-label>
+                    </div>
+                </div>
+            </div>
+            <mat-divider></mat-divider>
+            <div fxFlex="1 1 60px" class="text-box-wrapper" fxLayout="row" fxLayoutAlign="center center">
+                <div class="chat-input-wrapper" fxFlexOffset="10px" fxLayout="row" fxLayoutAlign="center center">
+                    <mat-icon>attach_file</mat-icon>
+                    <textarea  matInput [(ngModel)]="chatMsgRT" fxFlexOffset="10px"  fxFlex="1 1 auto" class="chat-input" placeholder="Write your message.." ></textarea>
+                </div>
+                
+                <div fxFlex="1 1 50px">
+                    <button mat-mini-fab class="send-button" (click)="sendMessage()"><mat-icon class="send-icon">send</mat-icon></button>
+                </div>
+            </div>
+
         </div>
     </mat-sidenav>
     <mat-sidenav-content >
@@ -43,7 +78,7 @@
            </ng-container>
           
 
-            <div class="conference-bottom-bar" fxflex="1 1 75px" fxLayout="row" fxLayoutAlign="center center"  >
+            <div class="conference-bottom-bar" fxflex="1 1 80px" fxLayout="row" fxLayoutAlign="center center"  >
                 <div fxFlex="1 1 100%">
         
                 </div>
