--- a/src/app/feature-modules/patients/conference/conference.component.scss
+++ b/src/app/feature-modules/patients/conference/conference.component.scss
@@ -46,7 +46,6 @@
     width: 100px;
     height: 150px;
     position: absolute;
-    background-color: violet;
     left: 20px;
     bottom: 95px;
   }
@@ -55,5 +54,102 @@
     height: 100vh;
   }
   .sidenav{
-    width: 300px;
+    width: 22%;
+    min-width: 300px;
   }
+  .header-container-chat{
+    height: fit-content;
+  }
+  .close-icon{
+    color: #1967D3;
+  }
+  .chat-toolbar{
+    background-color: #E8F0FD;
+  }
+  .chat-text{
+    color: #1967D3;
+  }
+  .send-button{
+    background-color: $accent;
+  }
+  .send-icon{
+    color: white;
+  }
+  .text-box-wrapper{
+    width: 100%;
+  }
+  #sidenavInner{
+    height: 100%;
+    overflow: hidden;
+  }
+  .chat-input{ 
+    max-height: 80%;
+    resize: none;
+    padding-top: 15px;
+    padding-bottom: 10px;
+    border: none;
+ }
+ .chat-input:focus{
+  outline: 0;
+  border: none;
+}
+ .chat-input::-webkit-scrollbar {
+     width: 1px;
+   }
+ .chat-input::-webkit-scrollbar-thumb {
+     border-radius: 1px;
+     background-color: transparent;
+ 
+ }
+ .chat-input-wrapper{
+   width: 100%;
+   height: 100%;
+ }
+ .chat-mgs-outer{
+   max-width: 80%;
+   width: fit-content;
+   padding: 10px;
+ }
+ .chat-msg{
+   
+   padding-left: 15px;
+   padding-top: 10px;
+   padding-bottom: 10px;
+   padding-right: 15px;
+   border-bottom-left-radius: 10px;
+   border-bottom-right-radius: 10px;
+   border-top-left-radius: 0px;
+   border-top-right-radius: 10px;
+   word-wrap: break-word;
+   overflow-wrap: break-word;
+   word-break: break-all;
+   
+ }
+ .left-label{
+   align-self: flex-start;
+ }
+ .right-label{
+  align-self: flex-end;
+  
+
+}
+ .msg-left{
+   background-color: $grey-lighter;
+ }
+ .msg-right{
+  background-color: $primary;
+  color: white;
+  border-bottom-left-radius: 10px;
+   border-bottom-right-radius: 0px;
+   border-top-left-radius: 10px;
+   border-top-right-radius: 10px;
+}
+.left-time-label{
+  align-self: flex-start;
+}
+.right-time-label{
+  align-self: flex-end;
+}
+ .chatbox-wrapper{
+   overflow: auto;
+ }
