--- a/src/app/feature-modules/patients/dashboard/dashboard.component.html
+++ b/src/app/feature-modules/patients/dashboard/dashboard.component.html
@@ -38,7 +38,7 @@ infiniteScrollThrottle="50"
             </div>
 
 
-            <agm-map class="facility-map" [latitude]="doctor.getDoctor().getCoordinates().latitude" [longitude]="doctor.getDoctor().getCoordinates().longitude" fxFlexOffset="25px" fxFlex="1 1 auto" fxFlexOffset="150px" 
+            <agm-map class="facility-map" [latitude]="doctor.getDoctor().getCoordinates().latitude" [longitude]="doctor.getDoctor().getCoordinates().longitude" fxFlex="1 1 auto"
               
             >
                <agm-map-type-control></agm-map-type-control>
