--- a/src/app/loading-dialog/loading-dialog.component.html
+++ b/src/app/loading-dialog/loading-dialog.component.html
@@ -1,5 +1,5 @@
 
 <div fxLayout="column" fxLayoutAlign="center center">
     <mat-spinner id="progress" diameter="60" ></mat-spinner>
-    <mat-label fxFlexOffset="10px" class="small-label">Loading...</mat-label>
+    <mat-label fxFlexOffset="10px" class="small-label">{{message?message:"Loading..."}}</mat-label>
 </div>
