--- a/src/app/feature-modules/patients/conference/conference.component.scss
+++ b/src/app/feature-modules/patients/conference/conference.component.scss
@@ -43,11 +43,16 @@
     background-color: $conferenceBg;
   }
   .local-video-player{
-    width: 100px;
-    height: 150px;
+    width: 150px;
+    height: 200px;
     position: absolute;
-    left: 20px;
-    bottom: 95px;
+    right: 20px;
+    bottom: 20px;
+    border-radius: 10px;
+    border-color: white;
+    border-width: 1px;
+    border-style: solid;
+    
   }
   mat-sidenav-content{
     width: 100%;
@@ -62,6 +67,7 @@
   }
   .close-icon{
     color: #1967D3;
+    cursor: pointer;
   }
   .chat-toolbar{
     background-color: #E8F0FD;
@@ -153,3 +159,103 @@
  .chatbox-wrapper{
    overflow: auto;
  }
+ #localVideo {
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
+ 
+}
+
+.main-conf-div{
+  position: relative;
+  height: 100%;
+  width: 100%;
+}
+.main-inner{
+ position: absolute;
+ left: 0px;
+ top: 0px;
+}
+#remoteVideo{
+  width: 100%;
+  height: 100%;
+ 
+}
+.video-wrapper{
+  width: 100%;
+  height: 100%;
+}
+.image-overlay{
+  background-color: $conferenceBg;
+  height: 100%;
+  width: 100%;
+}
+.full-screen-icon{
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  cursor: pointer;
+}
+
+.remote-media-indicator-wrapper{
+  position: absolute;
+  left: 15px;
+  bottom: 35px;
+  width: fit-content;
+  height: fit-content;
+}
+.remote-media-indicator-wrapper{
+  width: fit-content;
+  height: fit-content;
+}
+.remote-media-icon{
+  font-size: 12px;
+  height: fit-content;
+  width: fit-content;
+  color: white;
+}
+.remote-media-label{
+  font-size: 12px;
+  height: fit-content;
+  width: fit-content;
+  color: white;
+}
+.big-webcam-off{
+  font-size: 35px;
+  width: fit-content;
+  height: fit-content;
+  color: white;
+}
+.big-webcam-off-wrapper{
+  font-size: 35px;
+  width: 100%;
+  height: 100%;
+  background-color: $conferenceBg;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  border-radius: 10px;
+}
+.prescription-div{
+  height: fit-content;
+  width: 100%;
+  position: absolute;
+  top: 50px;
+}
+.prescription-card{
+  height: fit-content;
+  width: fit-content;
+  background-color: white;
+  border-radius: 25px;
+  border-style: solid;
+  border-width: 2px;
+  border-color: $accent;
+  cursor: pointer;
+
+}
+.rx-img{
+  height: 30px;
+  width: 30px;
+}
+
