--- a/src/app/feature-modules/patients/booking-reschedule-selector/booking-reschedule-selector.component.html
+++ b/src/app/feature-modules/patients/booking-reschedule-selector/booking-reschedule-selector.component.html
@@ -6,7 +6,7 @@
     <span fxFlex="1 1 15px"></span>
     <div fxLayout="row" fxLayoutGap="40px">
         <div class="left-containt" fxFlex="1 1 auto">
-            <img class="clock-icon"  src="/assets/imgs/empty_list_girl.svg">
+            <img class="clock-icon"  src="/assets/imgs/reschedule_girl.svg">
         </div>
         
         <div class="right-containt" fxLayout="column" fxLayoutAlign="center start">
@@ -18,6 +18,11 @@
                     <mat-datepicker #picker></mat-datepicker>
                     <!-- <mat-hint>Select date when you are available</mat-hint> -->
                 </mat-form-field>
+                <mat-form-field appearance="outline" >
+                    <mat-label>Reason (Optional)</mat-label>
+                    <textarea #reason class="reason-formfield" matInput placeholder="Reason (Optional)" maxlength="100" formControlName="reasonInput"></textarea>
+                    <mat-hint align="end">{{reason?reason.value.length:"0"}} / 100</mat-hint>
+                  </mat-form-field>
                 <mat-checkbox color="primary" class="example-margin" formControlName="check">
                     <mat-label  matTooltipPosition="above" matTooltip="Your booking postpond request will be sent to the doctor, and your booking will be rescheduled only if doctor approves that. The doctor can reject this request if he/she does not have time that day (e.g doctor holiday). Your current booking will be valid until doctor approves or rejects this request.">Agree with terms</mat-label>
                 </mat-checkbox>
@@ -28,7 +33,7 @@
     
     </div>
 
-    <div fxLayout="row">
+    <div fxLayout="row" fxFlexOffset="10px">
         <button mat-flat-button class="lighter-button" fxFlex="1 1 40%" (click)="cancel()">Cancel</button>
         <span fxFlex="1 1 10px"></span>
         <button mat-raised-button  fxFlex="1 1 auto" (click)="approve()">Send Request</button>
