--- a/src/app/feature-modules/patients/meetings/meetings.component.scss
+++ b/src/app/feature-modules/patients/meetings/meetings.component.scss
@@ -77,3 +77,16 @@ div::-webkit-scrollbar-thumb {
     transform: translateY(-1.1em) scale(.75);
     width: 133.33333%;
 }
+
+.status-label{
+    border-radius: 10px;
+    padding: 5px 10px 5px 10px;
+    background-color: $grey-lighter;
+    color: $alert;
+}
+.status-approved{
+    color: $accent;
+}
+.status-rejected{
+    color: $warn;
+}
